--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <style>
     body {
-        background-image: url('blueheart.jpg');
+        background-color: cornflowerblue;
         background-position: center;
         background-size: cover;
         height: 95vh;
